# wsh

./: .wshrc  CMakeLists.txt  README.md  wsh.sln
wsh/: CMakeLists.txt  alias.cpp  alias.h  completer.cpp  completer.h  config.cpp  config.h  history.cpp  history.h  utils.cpp  utils.h  virtual_env.cpp  virtual_env.h  wsh.cpp  wsh.h  zwinshell.cpp  zwinshell.h
